[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "pyzmq>=24.0.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
