[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "pyzmq>=24.0.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
